--- a/latihan4.html
+++ b/latihan4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harry Potter's World</title>
-    <link rel="icon" href="/latihan/images/hp.ico">
+    <link rel="icon" href="/HTMLcantik2/hp.ico">
 </head>
 <body style="background-color: whitesmoke;">
     
@@ -22,7 +22,7 @@
     tr:hover {background-color: gray;}
 </style>
 <h1 style="text-align: center;">Get to Know Harry Potter Movies with Me</h1>
-<a href="https://harrypotter.fandom.com/wiki/Harry_Potter_(film_series)" target="_blank"><img src="/latihan/images/films.jpeg" style="display: block; margin: auto;"></a><br>
+<a href="https://harrypotter.fandom.com/wiki/Harry_Potter_(film_series)" target="_blank"><img src="/HTMLcantik2/films.jpeg" style="display: block; margin: auto;"></a><br>
 <p style="text-align: center;">Seri film Harry Potter adalah adaptasi dari novel-novel karya <b>J.K. Rowling</b>, yang diproduksi oleh <b>Warner Bros</b>. Film ini terdiri dari delapan film yang dirilis antara tahun <i>2001 hingga 2011</i>, 
     dimulai dengan <i><b>Harry Potter and the Philosopher's Stone</i></b> dan diakhiri dengan <i><b>Harry Potter and the Deathly Hallows – Part 2</i></b>.
     Seri film Harry Potter mendapatkan pujian kritis dan komersial yang luar biasa, menjadikannya salah satu franchise film terlaris sepanjang masa dengan total pendapatan lebih dari <b>$7.7 miliar</b> di seluruh dunia.
@@ -81,7 +81,7 @@
 </style>
 <h2 class="Series Pertama" style="text-align: center;color: silver;background-color: darkblue;">Seri Pertama Harry Potter</h2>
 <h3>Harry Potter and The Philosopher’s Stone</h3>
-<p style="text-align: justify;"><img src="/latihan/images/kesatu.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/kesatu.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--VIDEO ADA DI SETIAP BAHASAN SERI YA PAK HEHEHEH. mohon maaf dan mohon dimaklumi ya pak--> <video style="float: right;margin-left: 10px; width: 350px;height: 300px;" controls>
     <source src="/latihan/images/stone.mp4" type="video/mp4"></video><b>Harry Potter and the Philosopher's Stone</b> adalah film fantasi yang dirilis pada tahun 2001, disutradarai oleh Chris Columbus dan berdasarkan novel pertama dalam seri Harry Potter karya J.K. Rowling. Film ini menandai awal dari saga yang sangat populer dan diadaptasi menjadi delapan film.<br>
     Cerita dimulai ketika Harry tinggal bersama keluarga Dursley yang tidak menyukainya. Saat Hagrid, penjaga Hogwarts, datang untuk memberitahunya bahwa ia diterima di sekolah sihir, Harry mulai memasuki dunia baru yang menakjubkan. Ia belajar tentang masa lalu orang tuanya dan hubungan mereka dengan penyihir jahat, Lord Voldemort, yang berusaha membunuhnya saat bayi.
@@ -101,7 +101,7 @@
 </ul>
 <h2 class="Series Kedua" style="text-align: center;color: whitesmoke;background-color: teal">Seri Kedua Harry Potter</h2>
 <h3>Harry Potter and The Chamber of Secrets</h3>
-<p style="text-align: justify;"><img src="/latihan/images/kedua.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/kedua.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--> <video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
     <source src="/latihan/images/chamber.mp4" type="video/mp4"></video> Harry Potter and the Chamber of Secrets adalah film kedua dalam seri Harry Potter, dirilis pada tahun 2002 dan disutradarai oleh Chris Columbus. Film ini diadaptasi dari novel kedua karya J.K. Rowling dan melanjutkan petualangan Harry Potter di Hogwarts School of Witchcraft and Wizardry.
     Cerita dimulai dengan Harry yang menghabiskan musim panas yang menyedihkan bersama keluarga Dursley, satu-satunya keluarga yang tersisa. Ia dikunjungi oleh Dobby, seorang elf rumah tangga yang memperingatkannya untuk tidak kembali ke Hogwarts karena bahaya yang akan datang.
@@ -121,7 +121,7 @@
 
 <h2 class="Series Ketiga" style="text-align: center;color: goldenrod;background-color: black;">Seri Ketiga Harry Potter</h2>
 <h3>Harry Potter and The Prisoner of Azkaban</h3>
-<p style="text-align: justify;"><img src="/latihan/images/ketiga.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/ketiga.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
 <source src="/latihan/images/azkaban.mp4" type="video/mp4"></video>Harry Potter and the Prisoner of Azkaban adalah film ketiga dalam seri Harry Potter, dirilis pada tahun 2004 dan disutradarai oleh Alfonso Cuarón. Film ini diadaptasi dari novel ketiga karya J.K. Rowling dan melanjutkan kisah Harry Potter selama tahun ketiganya di Hogwarts School of Witchcraft and Wizardry.
     Cerita dimulai dengan Harry yang menghabiskan musim panas di rumah Aunt Petunia dan Uncle Vernon. Setelah secara tidak sengaja melakukan sihir, ia melarikan diri ke London dan tinggal di Leaky Cauldron, di mana ia diberi tahu oleh Menteri Sihir Cornelius Fudge tentang Sirius Black, seorang pembunuh massal yang melarikan diri dari penjara Azkaban.
@@ -133,7 +133,7 @@
 </p>
 <h2 class="Series Keempat" style="text-align: center; color: lightgoldenrodyellow;background-color: darkmagenta;">Seri Keempat Harry Potter</h2>
 <h3>Harry Potter and The Goblet of Fire</h3>
-<p style="text-align: justify;"><img src="/latihan/images/keempat.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/keempat.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
     <source src="/latihan/images/goblet.mp4" type="video/mp4"></video> Harry Potter and the Goblet of Fire adalah film keempat dalam seri Harry Potter, dirilis pada tahun 2005 dan disutradarai oleh Mike Newell. Film ini diadaptasi dari novel keempat karya J.K. Rowling dan melanjutkan petualangan Harry Potter selama tahun keempatnya di Hogwarts School of Witchcraft and Wizardry.
     Cerita dimulai dengan serangan di Piala Dunia Quidditch, di mana para pengikut Voldemort, yang dikenal sebagai Death Eaters, menyerang penonton. Setelah kembali ke Hogwarts, Harry menemukan bahwa sekolah akan menjadi tuan rumah Triwizard Tournament. Tiga sekolah sihir—Hogwarts, Beauxbatons, dan Durmstrang—mengirimkan wakil untuk berkompetisi. Sebuah artefak bernama Goblet of Fire digunakan untuk memilih peserta.
@@ -158,7 +158,7 @@
 </table>
 <h2 class="Series Kelima" style="text-align: center;color: goldenrod;background-color: aquamarine;">Seri Kelima Harry Potter</h2>
 <h3>Harry Potter and The Order of The Phoenix</h3>
-<p style="text-align: justify;"><img src="/latihan/images/kelima.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/kelima.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
     <source src="/latihan/images/ordo.mp4" type="video/mp4"></video>Harry Potter and the Order of the Phoenix adalah film kelima dalam seri Harry Potter, dirilis pada tahun 2007 dan disutradarai oleh David Yates. Film ini diadaptasi dari novel kelima karya J.K. Rowling dan melanjutkan kisah Harry Potter selama tahun kelimanya di Hogwarts School of Witchcraft and Wizardry.
     Cerita dimulai dengan Harry yang menghabiskan musim panas di rumah Dursley. Setelah diserang oleh Dementor bersama sepupunya, Dudley, Harry berhasil menggunakan Patronus untuk mengusir mereka. Namun, ia kemudian dihadapkan pada disiplin dari Kementerian Sihir karena menggunakan sihir di luar sekolah. Dengan bantuan Dumbledore, Harry dibebaskan dari tuduhan dan kembali ke Hogwarts.
@@ -170,7 +170,7 @@
 </p>
 <h2 class="Series Keenam" style="text-align: center;color: black;background-color: gold;">Seri Keenam Harry Potter</h2>
 <h3>Harry Potter and The Half Blood Prince</h3>
-<p style="text-align: justify;"><img src="/latihan/images/keenam.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/keenam.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
     <source src="/latihan/images/halfblood.mp4" type="video/mp4"></video>Harry Potter and the Half-Blood Prince adalah film keenam dalam seri Harry Potter, dirilis pada tahun 2009 dan disutradarai oleh David Yates. Film ini diadaptasi dari novel keenam karya J.K. Rowling dan melanjutkan kisah Harry Potter selama tahun keenamnya di Hogwarts School of Witchcraft and Wizardry.
     Cerita dimulai dengan Harry yang kembali ke Hogwarts setelah menghabiskan musim panas yang penuh kesedihan akibat kehilangan Sirius Black. Dumbledore menjemput Harry dan mengajaknya mengunjungi Horace Slughorn, mantan guru Potions yang setuju untuk kembali mengajar di Hogwarts.
@@ -186,7 +186,7 @@
 </p>
 <h2 class="Series Ketujuh" style="text-align: center;color: darkgoldenrod;background-color: yellowgreen;">Seri Ketujuh Harry Potter</h2>
 <h3>Harry Potter and The Deathly Hallows</h3>
-<p style="text-align: justify;"><img src="/latihan/images/ketujuh.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
+<p style="text-align: justify;"><img src="/HTMLcantik2/ketujuh.jpeg" style="float: left;margin-right: 10px;width: 150px;height: 215px;">
     <!--DISINI JUGA ADA VIDEO NYA YAA PAAKK--><video style="float: right;margin-left: 10px;width: 350px;height: 300px;" controls>
     <source src="/latihan/images/hallows.mp4" type="video/mp4"></video>Harry Potter and the Deathly Hallows adalah film yang dibagi menjadi dua bagian, yaitu Part 1 dan Part 2. Keduanya diadaptasi dari novel terakhir dalam seri Harry Potter karya J.K. Rowling dan disutradarai oleh David Yates.
     Cerita dimulai dengan serangan di rumah Dursley saat Harry bersiap untuk meninggalkan mereka. Setelah berhasil melarikan diri dengan bantuan anggota Orde Phoenix, Harry belajar bahwa Voldemort semakin kuat dan berusaha mencari cara untuk mengalahkannya. Dumbledore telah meninggalkan petunjuk untuk Harry dalam bentuk barang-barang yang diwariskan kepadanya, termasuk Snitch yang ditangkapnya di turnamen Quidditch.<br>
@@ -224,15 +224,15 @@
     }
 </style>
 <div class="content">
-    <img src="/latihan/images/1.jpeg" style="margin-right: 20px;margin-left: 70px; width: 300px;height: 431px;"> 
-    <img src="/latihan/images/2.jpeg" style="margin-right: 20px;margin-left: 70px; width: 350px;height: 400px;"> 
-    <img src="/latihan/images/3.jpeg" style="margin-right: 20px;margin-left: 50px;"> 
-    <img src="/latihan/images/4.jpeg" style="margin-right: 20px;margin-right: 30px;margin-left: 70px;margin-top: 50px;width: 359px;height: 294px;">
-    <img src="/latihan/images/5.jpeg" style="margin-right: 20px;margin-right: 40px;margin-left: 40px;margin-top: 50px;"> 
-    <img src="/latihan/images/6.jpeg" style="margin-right: 20px;margin-right: 40px;margin-left: 40px;margin-top: 50px;width: 350px;height: 250px;"> 
-    <img src="/latihan/images/7.jpeg" style="margin-right: 20px;margin-right: 40px;margin-left: 70px;margin-top: 50px;width: 300px;height: 350px;"> 
-    <img src="/latihan/images/8.jpeg" style="margin-right: 20px;margin-right: 50px;margin-left: 50px;margin-top: 50px;width: 290px;height: 350px;"> 
-    <img src="/latihan/images/9.jpeg" style="margin-right: 20px;margin-right: 50px;margin-left: 50px;margin-top: 50px;width: 284px;height: 374px;"><br>
+    <img src="/lHTMLcantik2/1.jpeg" style="margin-right: 20px;margin-left: 70px; width: 300px;height: 431px;"> 
+    <img src="/HTMLcantik2/2.jpeg" style="margin-right: 20px;margin-left: 70px; width: 350px;height: 400px;"> 
+    <img src="/HTMLcantik2/3.jpeg" style="margin-right: 20px;margin-left: 50px;"> 
+    <img src="/HTMLcantik2/4.jpeg" style="margin-right: 20px;margin-right: 30px;margin-left: 70px;margin-top: 50px;width: 359px;height: 294px;">
+    <img src="/HTMLcantik2/5.jpeg" style="margin-right: 20px;margin-right: 40px;margin-left: 40px;margin-top: 50px;"> 
+    <img src="/HTMLcantik2/6.jpeg" style="margin-right: 20px;margin-right: 40px;margin-left: 40px;margin-top: 50px;width: 350px;height: 250px;"> 
+    <img src="/HTMLcantik2/7.jpeg" style="margin-right: 20px;margin-right: 40px;margin-left: 70px;margin-top: 50px;width: 300px;height: 350px;"> 
+    <img src="/HTMLcantik2/8.jpeg" style="margin-right: 20px;margin-right: 50px;margin-left: 50px;margin-top: 50px;width: 290px;height: 350px;"> 
+    <img src="/HTMLcantik2/9.jpeg" style="margin-right: 20px;margin-right: 50px;margin-left: 50px;margin-top: 50px;width: 284px;height: 374px;"><br>
     
 </div>
 
