--- a/latihan4.html
+++ b/latihan4.html
@@ -224,7 +224,7 @@
     }
 </style>
 <div class="content">
-    <img src="/lHTMLcantik2/1.jpeg" style="margin-right: 20px;margin-left: 70px; width: 300px;height: 431px;"> 
+    <img src="/HTMLcantik2/1.jpeg" style="margin-right: 20px;margin-left: 70px; width: 300px;height: 431px;"> 
     <img src="/HTMLcantik2/2.jpeg" style="margin-right: 20px;margin-left: 70px; width: 350px;height: 400px;"> 
     <img src="/HTMLcantik2/3.jpeg" style="margin-right: 20px;margin-left: 50px;"> 
     <img src="/HTMLcantik2/4.jpeg" style="margin-right: 20px;margin-right: 30px;margin-left: 70px;margin-top: 50px;width: 359px;height: 294px;">
